--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,15 @@
 			text-align: center;
 			cursor: pointer;
 		}
+    #reticle {
+      color: white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 40px;
+      opacity: 0.7;
+    }
 	</style>
 </head>
 <body>
@@ -54,5 +63,6 @@
         	(W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
         </div>
     </div>
+    <div id="reticle" style="display: none">+</div>
 </body>
 </html>
